--- a/index.html
+++ b/index.html
@@ -13,9 +13,13 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ScrollMagic/2.0.7/plugins/animation.gsap.min.js"></script>
 </head>
 <body>
+    <section class="logo-wrapper">
+        <img class="logo" src="img/logo.png">
+    </section>
     <section class="first-sec">
-        <h1>Welcome to Pizza Land </h1>
+        <h1>Welcome to Pizza Land </h1> 
         <h2> Have a Slice Day </h2>
+        
         <div class="image-wrapper">
             <img class="section-1-bg" src="img/section_1_bg.jpg">
             <div class="ingredient-images">
@@ -90,6 +94,9 @@
             <img class="section-4-03" src="img/section_4_03.webp">
             <img class="section-4-04" src="img/section_4_04.webp">
         </div>
+    </section>
+    <section class="bottom-bar">
+        All Rights Reserved
     </section>
 </body>
 </html>
